--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,15 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
-    "build": "next build",
-    "dev": "next dev -p 3000",
+    "build": "next build --webpack",
+    "dev": "next dev -p 3000 --webpack",
     "lint": "next lint",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "next start -p ${PORT:-3000} --webpack",
     "generate-icons": "node generate-icons.js"
   },
   "dependencies": {
@@ -46,22 +50,22 @@
     "embla-carousel-react": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-        "next": "^15.2.4",
+    "next": "^16.0.10",
     "next-pwa": "^5.6.0",
     "next-themes": "latest",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
-        "react": "^19.2.2",
-        "react-day-picker": "latest",
-        "react-dom": "^19.2.2",
+    "react": "^19.2.2",
+    "react-day-picker": "latest",
+    "react-dom": "^19.2.2",
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-        "vaul": "latest",
-        "zod": "^3.24.1"
+    "vaul": "latest",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
